--- a/dev_toolkit/dev_toolkit.resx
+++ b/dev_toolkit/dev_toolkit.resx
@@ -124,63 +124,63 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADw
-        DAAAAk1TRnQBSQFMAgEBDgEAAfgBAAH4AQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAAUADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/4MACQcBAAEHBAAK/zIA
-        AQcDAAf/BAAB7CQABgcB/AH5AfoCBwUABv8BAAHsAgcB7AEAAewjAAYHA+wCBwEAAQcDAAX/AQAB7AIH
-        Af4C7DAAAgcCAAX/AQAEBwHsAQckAAoHAQABBwEAAQcCAAX/AQABBwH+AgcB7AEHLgABBwEAAQcDAAX/
-        AQAB7AL+AQcC7CYACP8BAAEHAQABBwIABv8BAAHsAgcB7CgAAf8FAAH/BgAH/ywACP8FAAr/KgAB/wUA
-        Af8FAAf/LQAI/wQAB/8BAAH/NwAH//8ADwAJBAMAAgMJAAEDKAABBAcAAQQDAAIDCQABAygAAQQHAAEE
-        AwACAwkAAQMoAAEEBwABBAMAAgMJAAEDKAABBAcAAQQDAAwDKAABBAcAAQQDAAIDCAACAyEAAQQGAAEE
-        BAAEBAMAAQMKAAEDIAACBAYAAQQEAAEEAQABBAQAAQMKAAEDIAACBAYAAQQEAAIEBQABAwoAAQMgAAIE
-        BgAGBAYAAQMKAAEDIAACBBIAAQMrAAIEEgABAysAAgRtAAEEDwABBC4AAQQBAAEEDQABBAEAAQQsAAEE
-        AQABBA0AAQQBAAEEDAAB/xgAAewEAAHsAwABBAYAAewEAAHsAwABBAwAAv8+AAH/GAAB7AYAAewIAAHs
-        BgAB7AsAAf8CAAL/FgAB7AoAAewEAAHsBAACBAQAAewJAAL/AQAB/ywAAgQOAAT/GgAGBAoABgQMAAb/
-        GAAGBAoABgQMAAX/KwACBA4ABP8XAAHsCgAB7AQAAewEAAIEBAAB7AkAA/8aAAHsBgAB7AgAAewGAAHs
-        CwAC/z4AAf8dAAHsBAAB7AoAAewEAAHs5AABBAYAAf83AAEEAQABBAUAAf82AAEEAQABBAYAAf8B+jAA
-        AewCAAHsAgABBAcAAf8C+j0AAf8D+iwAAewGAAHsCAAB/wT6OwAB/wX6OgAB/wT6AQIqAAHsBgAB7AgA
-        Af8D+gECOwAB/wL6AQIuAAHsAgAB7AoAAf8B+gECPQAB/wECPgAB/3sAAUIBTQE+BwABPgMAASgDAAFA
-        AwABQAMAAQEBAAEBBgABAhYAA/8BAAT/BAABwAEHAQABDAQAAYABAwEAAQgFAAEBAQABAQUAAQEBAAED
-        BQABAQEAAQMHAAEDBwABAwQAAYACAAEDBAABwAIAAQcEAAHgAQEBAAEPBAAB4AEHAQABDwQAAfABBwEA
-        AQ8EAAHwAQMBAAEfBAAB+AEDAQABPwQAAv8BAAF/BAAK/wEAAQ8C/wHAAQEB/gH/AX8B7wH8AQEBgAEx
-        Af4B/wFIAS8C/QGAATEBvgH7AX8B7wH9AQUBgAExAZ4B8wFIAS8BAQH9AYABAQGOAeMBfwHvAX0BBQGA
-        AQEBhgHDAX8BbwFBAf0BgAEBAY4B4wFOAa4BfQEhAY8B8QGeAfMBVQFEAUEB6wGPAfEBvgH7AWoBuAF9
-        AecBjwHxAf4B/wEFAXwBSAEPAY8B8QH+Af8B+gH8AXoB/wGPAfEB/gH/Af0B+AF5Af8BjwH1Av8B/gEE
-        AQMB/wGAAQEJ/wH5Af8B+QL/AdUBVQH/AfEB/wHxAf8BnwG/Af4B/wHjAf8B4wH/AY8C/wHgAUcB4AFH
-        AfcBDwG/Af4BzwEPAc8BDwHzAR8C/wSfAfABHwG/Af4BPwHPATkBzwHwAT8C/wF/Ae8BeQHvAfABBwG/
-        Af4BYAFvAWABbwHwAQ8C/wFgAW8BYAFvAfABHwG/Af4BfwHvAXkB7wHwAT8C/wE/Ac8BOQHPAfABfwG/
-        Af4EnwHwA/8BzwE/Ac8BPwHxAf8BvwH+AeABfwHgAX8B8wH/AdUBVQT/AfcR/wH+AXkB9wH/AeMBjwH+
-        Af8B/AExAfMB/wHjAY8B/AF/Af8B4wHxAf8B4wGPAf4B/wH8AQcB8AH/AeMBjwH+Af8B+QGPAfABfwHj
-        AY8B/gH/AdMBywHwAT8B4wGPAd4B9wGXAekB8AEfAeMBjwGAAQMBlwHpAfABPwHjAY8B3gH3AdMBywHw
-        AX8B4wGPAf4B/wH5AZ8B8AH/AeMBjwH+Af8B/AE/AfEB/wHjAY8B/gP/AfMB/wHjAY8B/AF/AfwBPwH3
-        Af8B4wGPAf4B/wH+AX8I/ws=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADu
+        DAAAAk1TRnQBSQFMAgEBDgIAAQEBAAEBARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        AUADAAFAAwABAQEAAQgGAAEQGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
+        AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
+        AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
+        AwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZ
+        AgABZgHMAgABZgH/AgABmQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFm
+        AgABzAGZAgACzAIAAcwB/wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEz
+        AQABmQEAATMBAAHMAQABMwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFm
+        AgABMwFmATMBAAEzAmYBAAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFm
+        AQABMwKZAQABMwGZAcwBAAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEA
+        ATMBzAH/AQABMwH/ATMBAAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFm
+        AQABZgEAAWYBAAGZAQABZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFm
+        ATMBzAEAAWYBMwH/AQACZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFm
+        AQABZgKZAQABZgGZAcwBAAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEA
+        AWYB/wIAAWYB/wEzAQABZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZ
+        AQABmQEAAZkBAAHMAQABmQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEz
+        AQABmQEzAWYBAAGZAWYBmQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/
+        AQABmQHMAgABmQHMATMBAAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEA
+        AZkBzAFmAQABmQH/AZkBAAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHM
+        AQABzAEAAZkBMwIAAcwCMwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFm
+        ATMBAAGZAmYBAAHMAWYBmQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZ
+        AQABzAGZAcwBAAHMAZkB/wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/
+        ATMBAAGZAf8BZgEAAcwB/wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHM
+        ATMCAAH/AjMBAAH/ATMBZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJm
+        AQAB/wFmAZkBAAH/AWYBzAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHM
+        AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
+        AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
+        ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/+DAAkHAQABBwQACv8yAAEH
+        AwAH/wQAAewkAAYHAfwB+QH6AgcFAAb/AQAB7AIHAewBAAHsIwAGBwPsAgcBAAEHAwAF/wEAAewCBwH+
+        AuwwAAIHAgAF/wEABAcB7AEHJAAKBwEAAQcBAAEHAgAF/wEAAQcB/gIHAewBBy4AAQcBAAEHAwAF/wEA
+        AewC/gEHAuwmAAj/AQABBwEAAQcCAAb/AQAB7AIHAewoAAH/BQAB/wYAB/8sAAj/BQAK/yoAAf8FAAH/
+        BQAH/y0ACP8EAAf/AQAB/zcAB///AA8ACQQDAAIDCQABAygAAQQHAAEEAwACAwkAAQMoAAEEBwABBAMA
+        AgMJAAEDKAABBAcAAQQDAAIDCQABAygAAQQHAAEEAwAMAygAAQQHAAEEAwACAwgAAgMhAAEEBgABBAQA
+        BAQDAAEDCgABAyAAAgQGAAEEBAABBAEAAQQEAAEDCgABAyAAAgQGAAEEBAACBAUAAQMKAAEDIAACBAYA
+        BgQGAAEDCgABAyAAAgQSAAEDKwACBBIAAQMrAAIEbQABBA8AAQQuAAEEAQABBA0AAQQBAAEELAABBAEA
+        AQQNAAEEAQABBAwAAf8YAAHsBAAB7AMAAQQGAAHsBAAB7AMAAQQMAAL/PgAB/xgAAewGAAHsCAAB7AYA
+        AewLAAH/AgAC/xYAAewKAAHsBAAB7AQAAgQEAAHsCQAC/wEAAf8sAAIEDgAE/xoABgQKAAYEDAAG/xgA
+        BgQKAAYEDAAF/ysAAgQOAAT/FwAB7AoAAewEAAHsBAACBAQAAewJAAP/GgAB7AYAAewIAAHsBgAB7AsA
+        Av8+AAH/HQAB7AQAAewKAAHsBAAB7OQAAQQGAAH/NwABBAEAAQQFAAH/NgABBAEAAQQGAAH/AfowAAHs
+        AgAB7AIAAQQHAAH/Avo9AAH/A/osAAHsBgAB7AgAAf8E+jsAAf8F+joAAf8E+gECKgAB7AYAAewIAAH/
+        A/oBAjsAAf8C+gECLgAB7AIAAewKAAH/AfoBAj0AAf8BAj4AAf97AAFCAU0BPgcAAT4DAAEoAwABQAMA
+        AUADAAEBAQABAQYAAQIWAAP/AQAE/wQAAcABBwEAAQwEAAGAAQMBAAEIBQABAQEAAQEFAAEBAQABAwUA
+        AQEBAAEDBwABAwcAAQMEAAGAAgABAwQAAcACAAEHBAAB4AEBAQABDwQAAeABBwEAAQ8EAAHwAQcBAAEP
+        BAAB8AEDAQABHwQAAfgBAwEAAT8EAAL/AQABfwQACv8BAAEPAv8BwAEBAf4B/wF/Ae8B/AEBAYABMQH+
+        Af8BSAEvAv0BgAExAb4B+wF/Ae8B/QEFAYABMQGeAfMBSAEvAQEB/QGAAQEBjgHjAX8B7wF9AQUBgAEB
+        AYYBwwF/AW8BQQH9AYABAQGOAeMBTgGuAX0BIQGPAfEBngHzAVUBRAFBAesBjwHxAb4B+wFqAbgBfQHn
+        AY8B8QH+Af8BBQF8AUgBDwGPAfEB/gH/AfoB/AF6Af8BjwHxAf4B/wH9AfgBeQH/AY8B9QL/Af4BBAED
+        Af8BgAEBCf8B+QH/AfkC/wHVAVUB/wHxAf8B8QH/AZ8BvwH+Af8B4wH/AeMB/wGPAv8B4AFHAeABRwH3
+        AQ8BvwH+Ac8BDwHPAQ8B8wEfAv8EnwHwAR8BvwH+AT8BzwE5Ac8B8AE/Av8BfwHvAXkB7wHwAQcBvwH+
+        AWABbwFgAW8B8AEPAv8BYAFvAWABbwHwAR8BvwH+AX8B7wF5Ae8B8AE/Av8BPwHPATkBzwHwAX8BvwH+
+        BJ8B8AP/Ac8BPwHPAT8B8QH/Ab8B/gHgAX8B4AF/AfMB/wHVAVUE/wH3Ef8B/gF5AfcB/wHjAY8B/gH/
+        AfwBMQHzAf8B4wGPAfwBfwH/AeMB8QH/AeMBjwH+Af8B/AEHAfAB/wHjAY8B/gH/AfkBjwHwAX8B4wGP
+        Af4B/wHTAcsB8AE/AeMBjwHeAfcBlwHpAfABHwHjAY8BgAEDAZcB6QHwAT8B4wGPAd4B9wHTAcsB8AF/
+        AeMBjwH+Af8B+QGfAfAB/wHjAY8B/gH/AfwBPwHxAf8B4wGPAf4D/wHzAf8B4wGPAfwBfwH8AT8B9wH/
+        AeMBjwH+Af8B/gF/CP8L
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
